Form component design ready

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </li>
       </ul>
     </nav>
-    <main>
+    <main class="main">
       <section class="hero">
         <div class="hero__content container-pos box-shadow-light">
           <div class="hero__image-container">
@@ -89,8 +89,15 @@
           </div>
         </div>
         <div class="media">
-          <div class="media__content container-pos box-shadow-light componet-glue">
-            <div class="media__image-container two-border-radius--right two-border-radius--bottom">
+          <div
+            class="media__content container-pos box-shadow-light componet-glue"
+          >
+            <div
+              class="
+                media__image-container
+                two-border-radius--right two-border-radius--bottom
+              "
+            >
               <img class="image" src="assets\3.kép.jpg" alt="" />
             </div>
             <article class="media__body">
@@ -121,15 +128,29 @@
       <article class="about-us">
         <header>
           <div class="media2-header__content container-pos box-shadow-light">
-            <h2 class="text-shadow-grey" >Ismerj meg minket!</h2>
-            <h3 class="text-shadow-grey" >Rólunk</h3>
+            <h2 class="text-shadow-grey">Ismerj meg minket!</h2>
+            <h3 class="text-shadow-grey">Rólunk</h3>
           </div>
         </header>
-        <section class="media2__content container-pos box-shadow-light componet-glue">
-          <div class="media2__image-container box-shadow-grey two-border-radius--left two-border-radius--bottom">
+        <section
+          class="media2__content container-pos box-shadow-light componet-glue"
+        >
+          <div
+            class="
+              media2__image-container
+              box-shadow-grey
+              two-border-radius--left two-border-radius--bottom
+            "
+          >
             <img src="assets\4.kép.jpg" alt="" class="image" />
           </div>
-          <div class="media2__body box-shadow-grey two-border-radius--right two-border-radius--top">
+          <div
+            class="
+              media2__body
+              box-shadow-grey
+              two-border-radius--right two-border-radius--top
+            "
+          >
             <p class="media2__text">
               Ismertető jegyeink: problémamegoldás, közvetlenség, megbízhatóság.
             </p>
@@ -147,7 +168,14 @@
           </div>
         </section>
         <footer>
-          <div class="media2__footer-content container-pos box-shadow-light componet-glue">
+          <div
+            class="
+              media2__footer-content
+              container-pos
+              box-shadow-light
+              componet-glue
+            "
+          >
             <div class="media2__footer-body">
               <div class="circle box-shadow-grey"></div>
               <p class="media2__footer-text">személyesség</p>
@@ -187,37 +215,54 @@
       <article class="services">
         <header>
           <div class="media2-header__content container-pos box-shadow-light">
-            <h2  class="text-shadow-grey" >Eseményeknek élünk</h2>
-            <h3  class="text-shadow-grey" >Szolgáltatásaink</h3>
+            <h2 class="text-shadow-grey">Eseményeknek élünk</h2>
+            <h3 class="text-shadow-grey">Szolgáltatásaink</h3>
           </div>
         </header>
-        <section class="media2__content flip-flex container-pos box-shadow-light componet-glue">
-          <div class="media2__image-container box-shadow-grey two-border-radius--right two-border-radius--bottom">
+        <section
+          class="
+            media2__content
+            flip-flex
+            container-pos
+            box-shadow-light
+            componet-glue
+          "
+        >
+          <div
+            class="
+              media2__image-container
+              box-shadow-grey
+              two-border-radius--right two-border-radius--bottom
+            "
+          >
             <img src="assets\2.kép.jpg" alt="" class="image" />
           </div>
-          <div class="media2__body box-shadow-grey two-border-radius--left two-border-radius--top">
+          <div
+            class="
+              media2__body
+              box-shadow-grey
+              two-border-radius--left two-border-radius--top
+            "
+          >
+            <p class="media2__text">Regisztráció</p>
+            <p class="media2__text">Vendégirányítás</p>
+            <p class="media2__text">Beléptetés- ültetés - kísérés</p>
+            <p class="media2__text">Protokoll feladatok ellátása</p>
             <p class="media2__text">
-              Regisztráció
+              Rendezvényhez kapcsolódó termékek árusítása
             </p>
-            <p class="media2__text">
-              Vendégirányítás 
-            </p>
-            <p class="media2__text">
-              Beléptetés- ültetés - kísérés 
-            </p>
-            <p class="media2__text">
-              Protokoll feladatok ellátása 
-            </p>
-            <p class="media2__text">
-              Rendezvényhez kapcsolódó termékek árusítása 
-            </p>
-            <p class="media2__text">
-              Call center
-            </p>
+            <p class="media2__text">Call center</p>
           </div>
         </section>
         <footer>
-          <div class="media2__footer-content container-pos box-shadow-light componet-glue">
+          <div
+            class="
+              media2__footer-content
+              container-pos
+              box-shadow-light
+              componet-glue
+            "
+          >
             <div class="media2__footer-body">
               <div class="circle box-shadow-grey"></div>
               <p class="media2__footer-text">létszámtól függetlenül</p>
@@ -236,33 +281,42 @@
             </div>
           </div>
         </footer>
-        <section class="media2__content container-pos box-shadow-light componet-glue">
-          <div class="media2__image-container box-shadow-grey two-border-radius--left two-border-radius--bottom">
+        <section
+          class="media2__content container-pos box-shadow-light componet-glue"
+        >
+          <div
+            class="
+              media2__image-container
+              box-shadow-grey
+              two-border-radius--left two-border-radius--bottom
+            "
+          >
             <img src="assets\4.kép.jpg" alt="" class="image" />
           </div>
-          <div class="media2__body box-shadow-grey two-border-radius--right two-border-radius--top">
-            <p class="media2__text">
-              Promóció 
-            </p>
-            <p class="media2__text">
-              Tematikus animáció
-            </p>
-            <p class="media2__text">
-              Csomagolás
-            </p>
-            <p class="media2__text">
-              Játékok, sorsolások működtetése
-            </p>
-            <p class="media2__text">
-              Merchandising
-            </p>
-            <p class="media2__text">
-              Szállítás - rakodás
-            </p>
+          <div
+            class="
+              media2__body
+              box-shadow-grey
+              two-border-radius--right two-border-radius--top
+            "
+          >
+            <p class="media2__text">Promóció</p>
+            <p class="media2__text">Tematikus animáció</p>
+            <p class="media2__text">Csomagolás</p>
+            <p class="media2__text">Játékok, sorsolások működtetése</p>
+            <p class="media2__text">Merchandising</p>
+            <p class="media2__text">Szállítás - rakodás</p>
           </div>
         </section>
         <footer>
-          <div class="media2__footer-content container-pos box-shadow-light componet-glue">
+          <div
+            class="
+              media2__footer-content
+              container-pos
+              box-shadow-light
+              componet-glue
+            "
+          >
             <div class="media2__footer-body">
               <div class="circle box-shadow-grey"></div>
               <p class="media2__footer-text">saját betanítási metódus</p>
@@ -294,48 +348,68 @@
       <article class="refs">
         <header>
           <div class="media2-header__content container-pos box-shadow-light">
-            <h2 class="text-shadow-grey" >Tapasztalataink</h2>
-            <h3 class="text-shadow-grey" >Referenciák</h3>
+            <h2 class="text-shadow-grey">Tapasztalataink</h2>
+            <h3 class="text-shadow-grey">Referenciák</h3>
           </div>
         </header>
-        <section class="media2__content container-pos box-shadow-light flip-flex componet-glue">
-          <div class="media2__image-container box-shadow-grey two-border-radius--right two-border-radius--bottom">
+        <section
+          class="
+            media2__content
+            container-pos
+            box-shadow-light
+            flip-flex
+            componet-glue
+          "
+        >
+          <div
+            class="
+              media2__image-container
+              box-shadow-grey
+              two-border-radius--right two-border-radius--bottom
+            "
+          >
             <img src="assets\2.kép.jpg" alt="" class="image" />
           </div>
-          <div class="media2__body box-shadow-grey media3-color-gradient-pink two-border-radius--left two-border-radius--top">
-            <h3 class="media2__body-heading center-text" >K&H Családi Nap</h3>
-            <p class="media2__text center-text">
-              Regisztráció
-            </p>
-            <p class="media2__text center-text">
-              Vendégirányítás 
-            </p>
-            <p class="media2__text center-text">
-              Csomagolás
-            </p>
-            <p class="media2__text center-text">
-              Szállítás
-            </p>
+          <div
+            class="
+              media2__body
+              box-shadow-grey
+              media3-color-gradient-pink
+              two-border-radius--left two-border-radius--top
+            "
+          >
+            <h3 class="media2__body-heading center-text">K&H Családi Nap</h3>
+            <p class="media2__text center-text">Regisztráció</p>
+            <p class="media2__text center-text">Vendégirányítás</p>
+            <p class="media2__text center-text">Csomagolás</p>
+            <p class="media2__text center-text">Szállítás</p>
           </div>
         </section>
-        <section class="media2__content container-pos box-shadow-light componet-glue">
-          <div class="media2__image-container box-shadow-grey two-border-radius--left two-border-radius--bottom">
+        <section
+          class="media2__content container-pos box-shadow-light componet-glue"
+        >
+          <div
+            class="
+              media2__image-container
+              box-shadow-grey
+              two-border-radius--left two-border-radius--bottom
+            "
+          >
             <img src="assets\4.kép.jpg" alt="" class="image" />
           </div>
-          <div class="media2__body box-shadow-grey media3-color-gradient-purple two-border-radius--right two-border-radius--top">
-            <h3 class="media2__body-heading center-text" >Cisco Expo</h3>
-            <p class="media2__text center-text">
-              Regisztráció
-            </p>
-            <p class="media2__text center-text">
-              Vendégirányítás 
-            </p>
-            <p class="media2__text center-text">
-              Csomagolás
-            </p>
-            <p class="media2__text center-text">
-              Szállítás
-            </p>
+          <div
+            class="
+              media2__body
+              box-shadow-grey
+              media3-color-gradient-purple
+              two-border-radius--right two-border-radius--top
+            "
+          >
+            <h3 class="media2__body-heading center-text">Cisco Expo</h3>
+            <p class="media2__text center-text">Regisztráció</p>
+            <p class="media2__text center-text">Vendégirányítás</p>
+            <p class="media2__text center-text">Csomagolás</p>
+            <p class="media2__text center-text">Szállítás</p>
           </div>
         </section>
       </article>
@@ -352,7 +426,74 @@
           <div class="separator2-hide colorgrad-bg-dense"></div>
         </div>
       </div>
-      <article class="jobs"></article>
+      <article class="jobs">
+        <header>
+          <div class="media2-header__content container-pos box-shadow-light">
+            <h2 class="text-shadow-grey">Munkát vállalnál?</h2>
+            <h3 class="text-shadow-grey">Álláslehetőség</h3>
+          </div>
+        </header>
+        <section
+          class="form__content container-pos box-shadow-light componet-glue"
+        >
+          <div class="form__body border-purple border-radius">
+            <h3>Itt Írj nekünk, és mi megkeresünk</h3>
+            <form action="https://formspree.io/f/{form_id}" method="post">
+              <fieldset>
+                <div class="form__body-grid">
+                  <input
+                    class="form__body-field border-purple border-radius"
+                    name="job"
+                    id="surename"
+                    type="text"
+                    placeholder="Vezetéknév"
+                  />
+                  <input
+                    class="form__body-field border-purple border-radius"
+                    name="job"
+                    id="forename"
+                    type="text"
+                    placeholder="Keresztnév"
+                  />
+                  <input
+                    class="form__body-field border-purple border-radius"
+                    name="job"
+                    id="email"
+                    type="email"
+                    placeholder="Emailcím"
+                  />
+                  <input
+                    class="form__body-field border-purple border-radius"
+                    name="job"
+                    id="tel"
+                    type="tel"
+                    placeholder="Telefonszám"
+                  />
+                </div>
+                <textarea
+                  class="
+                    form__body-message form__body-field
+                    border-purple border-radius
+                  "
+                  name="job"
+                  id="message"
+                  cols="30"
+                  rows="10"
+                >
+Kedves Backstage!
+  
+  Szeretnék hotsess munkát vállalni, kérlek keressetek meg!
+  
+  Üdvözlettel,
+                </textarea>
+                <button class="button glow-white" type="submit">
+                  Beküldés
+                </button>
+              </fieldset>
+            </form>
+          </div>
+        </section>
+      </article>
       <div class="divider1">
         <div class="divider__content container-pos box-shadow-light">
           <div class="separator1-hide colorgrad-bg-dense"></div>
@@ -384,9 +525,11 @@
           ><img src="assets/email-128.png" alt=""
         /></a>
         <a href="https://www.facebook.com/343652312363771/" target="_blank"
-          ><img src="assets/facebook-4-128.png" alt=""/></a>
-        <a href="https://www.messenger.com/t/343652312363771" target="_blank">
-          <img src="assets/messenger-128.png" alt=""/>
+          ><img src="assets/facebook-4-128.png" alt=""
+        /></a>
+        <a href="https://www.messenger.com/t/343652312363771" target="_blank"
+          ><img src="assets/messenger-128.png" alt=""
+        /></a>
       </article>
       <div class="divider2">
         <div class="divider__content container-pos box-shadow-light">
@@ -409,25 +552,5 @@
       <div class="line"></div>
     </section>
   </body>
-  <script>
-    let fn = document.getElementsByClassName("floating-menu")[0];
-    fn.style.opacity = "0";
-    window.addEventListener("scroll", function () {
-      fn.style.opacity = "0.7";
-      setTimeout(function () {
-        fn.style.opacity = "0";
-      }, 5000);
-    });
-    document.body.addEventListener(
-      "click",
-      function () {
-        console.log("click");
-        fn.style.opacity = "0.7";
-        setTimeout(function () {
-          fn.style.opacity = "0";
-        }, 5000);
-      },
-      true
-    );
-  </script>
+  <script src="main.js"></script>
 </html>
