--- a/index.html
+++ b/index.html
@@ -482,9 +482,10 @@
                 >
 Kedves Backstage!
   
-  Szeretnék hotsess munkát vállalni, kérlek keressetek meg!
+  Szeretnék hostess munkát vállalni, kérlek keressetek meg!
   
-  Üdvözlettel,
+  Köszönettel,
+  
                 </textarea>
                 <button class="button glow-white" type="submit">
                   Beküldés
@@ -508,28 +509,62 @@ Kedves Backstage!
         </div>
       </div>
       <article class="contacts">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2688.626858819386!2d18.84488431475097!3d47.63338417918653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476a709f81bc3e41%3A0x425a6ec08f7dd47e!2sBackstage%20Event%20Hostess%20Kft.!5e0!3m2!1shu!2shu!4v1634817160130!5m2!1shu!2shu"
-          width="320"
-          height="320"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-        ></iframe>
-        <a href="tel:+36703123264" target="_blank"
-          ><img src="assets/phone-30-128.png" alt=""
-        /></a>
-        <a
-          href="mailto:jozsef.mandula@gmail.com?subject=Mail from Our Site&body=Body-goes-here"
-          target="_blank"
-          ><img src="assets/email-128.png" alt=""
-        /></a>
-        <a href="https://www.facebook.com/343652312363771/" target="_blank"
-          ><img src="assets/facebook-4-128.png" alt=""
-        /></a>
-        <a href="https://www.messenger.com/t/343652312363771" target="_blank"
-          ><img src="assets/messenger-128.png" alt=""
-        /></a>
+        <header>
+          <div class="media2-header__content container-pos box-shadow-light">
+            <h2 class="text-shadow-grey">Minket itt megtalálsz</h2>
+            <h3 class="text-shadow-grey">Kapcsolat</h3>
+          </div>
+        </header>
+        <section
+          class="contacts__content container-pos box-shadow-light componet-glue"
+        >
+          <div class="contacts__body-grid">
+            <div class="contacts__body-cell">
+              <p><strong>Telefon:</strong>06 20 4314100</p>
+              <p><strong>Email:</strong>info@backstagekft.hu</p>
+              <p>
+                <strong>Telefon:</strong>2081 Piliscsaba Fényesligatsétány 1/3.
+              </p>
+              <p>© Backstage Kft. 2021.</p>
+            </div>
+            <div class="contacts__body-cell">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2688.626858819386!2d18.84488431475097!3d47.63338417918653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476a709f81bc3e41%3A0x425a6ec08f7dd47e!2sBackstage%20Event%20Hostess%20Kft.!5e0!3m2!1shu!2shu!4v1634817160130!5m2!1shu!2shu"
+                width="280"
+                height="280"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+              ></iframe>
+            </div>
+            <div class="contacts__body-cell contacts__body-cell-follow">
+              <p>Kövess minket:</p>
+              <a href="tel:+36703123264" target="_blank"
+                ><img src="assets/phone-30-128.png" alt=""
+              /></a>
+              <a
+                href="mailto:jozsef.mandula@gmail.com?subject=Mail from Our Site&body=Body-goes-here"
+                target="_blank"
+                ><img src="assets/email-128.png" alt=""
+              /></a>
+              <a
+                href="https://www.facebook.com/343652312363771/"
+                target="_blank"
+                ><img src="assets/facebook-4-128.png" alt=""
+              /></a>
+              <a
+                href="https://www.messenger.com/t/343652312363771"
+                target="_blank"
+                ><img src="assets/messenger-128.png" alt=""
+              /></a>
+              <img
+                class="divider__img"
+                src="assets\backstage logo.png"
+                alt="Backstage logo"
+              />
+            </div>
+          </div>
+        </section>
       </article>
       <div class="divider2">
         <div class="divider__content container-pos box-shadow-light">
