Contacts componet and full design done

--- a/index.html
+++ b/index.html
@@ -520,10 +520,16 @@ Kedves Backstage!
         >
           <div class="contacts__body-grid">
             <div class="contacts__body-cell">
-              <p><strong>Telefon:</strong>06 20 4314100</p>
-              <p><strong>Email:</strong>info@backstagekft.hu</p>
               <p>
-                <strong>Telefon:</strong>2081 Piliscsaba Fényesligatsétány 1/3.
+                <strong class="contacts__strong">Telefon: </strong>06 20 4314100
+              </p>
+              <p>
+                <strong class="contacts__strong">Email: </strong
+                >info@backstagekft.hu
+              </p>
+              <p>
+                <strong class="contacts__strong">Címünk: </strong>2081
+                Piliscsaba Fényesligatsétány 1/3.
               </p>
               <p>© Backstage Kft. 2021.</p>
             </div>
@@ -540,25 +546,28 @@ Kedves Backstage!
             <div class="contacts__body-cell contacts__body-cell-follow">
               <p>Kövess minket:</p>
               <a href="tel:+36703123264" target="_blank"
-                ><img src="assets/phone-30-128.png" alt=""
+                ><img class="social-logo" src="assets/phone-30-128.png" alt=""
               /></a>
               <a
                 href="mailto:jozsef.mandula@gmail.com?subject=Mail from Our Site&body=Body-goes-here"
                 target="_blank"
-                ><img src="assets/email-128.png" alt=""
+                ><img class="social-logo" src="assets/email-128.png" alt=""
               /></a>
               <a
                 href="https://www.facebook.com/343652312363771/"
                 target="_blank"
-                ><img src="assets/facebook-4-128.png" alt=""
+                ><img
+                  class="social-logo"
+                  src="assets/facebook-4-128.png"
+                  alt=""
               /></a>
               <a
                 href="https://www.messenger.com/t/343652312363771"
                 target="_blank"
-                ><img src="assets/messenger-128.png" alt=""
+                ><img class="social-logo" src="assets/messenger-128.png" alt=""
               /></a>
               <img
-                class="divider__img"
+                class="contacts__logo"
                 src="assets\backstage logo.png"
                 alt="Backstage logo"
               />
@@ -579,6 +588,7 @@ Kedves Backstage!
           <div class="separator2-hide colorgrad-bg-dense"></div>
         </div>
       </div>
+      <div class="spaceer-05"></div>
     </main>
     <section class="floating-menu circle-reverse box-shadow-grey">
       <h3 class="hide">Floating menu</h3>
