links to page done, 2nd menü in progress

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
           /></a>
         </li>
         <li class="nav-list__item glow-white hide-720 ease-out">
-          <a href="">Rólunk</a>
+          <a href="#about-us">Rólunk</a>
         </li>
         <li class="nav-list__item glow-white hide-720 ease-out">
-          <a href="">Referenciák</a>
+          <a href="#refs">Referenciák</a>
         </li>
         <li class="nav-list__item glow-white hide-720 ease-out">
-          <a href="">Szolgáltatások</a>
+          <a href="#services">Szolgáltatások</a>
         </li>
         <li class="nav-list__item glow-white hide-720 ease-out">
-          <a href="">Állás</a>
+          <a href="#jobs">Állás</a>
         </li>
         <li class="nav-list__item glow-white hide-720 ease-out">
-          <a href="">Kapcsolat</a>
+          <a href="#contacts">Kapcsolat</a>
         </li>
         <li>
           <a class="nav-list__item hide show-720" href="" alt="Menü"
@@ -125,7 +125,7 @@
           <div class="separator2 colorgrad-bg-dense"></div>
         </div>
       </div>
-      <article class="about-us">
+      <article id="about-us" class="about-us">
         <header>
           <div class="media2-header__content container-pos box-shadow-light">
             <h2 class="text-shadow-grey">Ismerj meg minket!</h2>
@@ -212,7 +212,7 @@
           <div class="separator2-hide colorgrad-bg-dense"></div>
         </div>
       </div>
-      <article class="services">
+      <article id="services" class="services">
         <header>
           <div class="media2-header__content container-pos box-shadow-light">
             <h2 class="text-shadow-grey">Eseményeknek élünk</h2>
@@ -345,7 +345,7 @@
           <div class="separator2 colorgrad-bg-dense"></div>
         </div>
       </div>
-      <article class="refs">
+      <article id="refs" class="refs">
         <header>
           <div class="media2-header__content container-pos box-shadow-light">
             <h2 class="text-shadow-grey">Tapasztalataink</h2>
@@ -426,7 +426,7 @@
           <div class="separator2-hide colorgrad-bg-dense"></div>
         </div>
       </div>
-      <article class="jobs">
+      <article id="jobs" class="jobs">
         <header>
           <div class="media2-header__content container-pos box-shadow-light">
             <h2 class="text-shadow-grey">Munkát vállalnál?</h2>
@@ -508,7 +508,7 @@ Kedves Backstage!
           <div class="separator2 colorgrad-bg-dense"></div>
         </div>
       </div>
-      <article class="contacts">
+      <article id="contacts" class="contacts">
         <header>
           <div class="media2-header__content container-pos box-shadow-light">
             <h2 class="text-shadow-grey">Minket itt megtalálsz</h2>
@@ -597,5 +597,5 @@ Kedves Backstage!
       <div class="line"></div>
     </section>
   </body>
-  <script src="main.js"></script>
+  <!-- <script src="main.js"></script> -->
 </html>
