2nd menu prototype

--- a/index.html
+++ b/index.html
@@ -590,11 +590,65 @@ Kedves Backstage!
       </div>
       <div class="spaceer-05"></div>
     </main>
-    <section class="floating-menu circle-reverse box-shadow-grey">
-      <h3 class="hide">Floating menu</h3>
-      <div class="line"></div>
-      <div class="line"></div>
-      <div class="line"></div>
+    <section class="floating-menu__menu">
+      <div
+        class="floating-menu__menu floating-menu circle-reverse box-shadow-grey"
+      >
+        <h3 class="hide">Floating menu</h3>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+      <div
+        class="
+          floating-menu__back-to-top
+          floating-menu
+          circle-reverse
+          box-shadow-grey
+        "
+      >
+        <h3 class="hide">Floating menu</h3>
+      </div>
+      <div
+        class="
+          floating-menu__contacts
+          floating-menu
+          circle-reverse
+          box-shadow-grey
+        "
+      >
+        <h3 class="hide">Floating menu</h3>
+      </div>
+      <div
+        class="
+          floating-menu__about-us
+          floating-menu
+          circle-reverse
+          box-shadow-grey
+        "
+      >
+        <h3 class="hide">Floating menu</h3>
+      </div>
+      <div
+        class="floating-menu__refs floating-menu circle-reverse box-shadow-grey"
+      >
+        <h3 class="hide">Floating menu</h3>
+      </div>
+      <div
+        class="
+          floating-menu__services
+          floating-menu
+          circle-reverse
+          box-shadow-grey
+        "
+      >
+        <h3 class="hide">Floating menu</h3>
+      </div>
+      <div
+        class="floating-menu__jobs floating-menu circle-reverse box-shadow-grey"
+      >
+        <h3 class="hide">Floating menu</h3>
+      </div>
     </section>
   </body>
   <!-- <script src="main.js"></script> -->
