2nd menu design ready

--- a/index.html
+++ b/index.html
@@ -608,6 +608,7 @@ Kedves Backstage!
         "
       >
         <h3 class="hide">Floating menu</h3>
+        <img src="assets/arrow-141-xxl.png" alt="" class="icon" />
       </div>
       <div
         class="
@@ -618,6 +619,7 @@ Kedves Backstage!
         "
       >
         <h3 class="hide">Floating menu</h3>
+        <img class="icon" src="assets/contacts-2-xxl.png" alt="" />
       </div>
       <div
         class="
@@ -628,11 +630,13 @@ Kedves Backstage!
         "
       >
         <h3 class="hide">Floating menu</h3>
+        <img src="assets/conference-xxl.png" alt="" class="icon" />
       </div>
       <div
         class="floating-menu__refs floating-menu circle-reverse box-shadow-grey"
       >
         <h3 class="hide">Floating menu</h3>
+        <img src="assets/show-property-xxl.png" alt="" class="icon" />
       </div>
       <div
         class="
@@ -643,13 +647,15 @@ Kedves Backstage!
         "
       >
         <h3 class="hide">Floating menu</h3>
+        <img src="assets/handshake-2-xxl.png" alt="" class="icon" />
       </div>
       <div
         class="floating-menu__jobs floating-menu circle-reverse box-shadow-grey"
       >
         <h3 class="hide">Floating menu</h3>
+        <img src="assets/add-user-3-xxl.png" alt="" class="icon" />
       </div>
     </section>
   </body>
-  <!-- <script src="main.js"></script> -->
+  <script src="main.js"></script>
 </html>
