fixed 2nd nav menu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="hu">
+<html id="top" lang="hu">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -590,7 +590,7 @@ Kedves Backstage!
       </div>
       <div class="spaceer-05"></div>
     </main>
-    <section class="floating-menu__menu">
+    <section>
       <div
         class="floating-menu__menu floating-menu circle-reverse box-shadow-grey"
       >
@@ -599,62 +599,90 @@ Kedves Backstage!
         <div class="line"></div>
         <div class="line"></div>
       </div>
-      <div
-        class="
-          floating-menu__back-to-top
-          floating-menu
-          circle-reverse
-          box-shadow-grey
-        "
-      >
-        <h3 class="hide">Floating menu</h3>
-        <img src="assets/arrow-141-xxl.png" alt="" class="icon" />
-      </div>
-      <div
-        class="
-          floating-menu__contacts
-          floating-menu
-          circle-reverse
-          box-shadow-grey
-        "
-      >
-        <h3 class="hide">Floating menu</h3>
-        <img class="icon" src="assets/contacts-2-xxl.png" alt="" />
-      </div>
-      <div
-        class="
-          floating-menu__about-us
-          floating-menu
-          circle-reverse
-          box-shadow-grey
-        "
-      >
-        <h3 class="hide">Floating menu</h3>
-        <img src="assets/conference-xxl.png" alt="" class="icon" />
-      </div>
-      <div
-        class="floating-menu__refs floating-menu circle-reverse box-shadow-grey"
-      >
-        <h3 class="hide">Floating menu</h3>
-        <img src="assets/show-property-xxl.png" alt="" class="icon" />
-      </div>
-      <div
-        class="
-          floating-menu__services
-          floating-menu
-          circle-reverse
-          box-shadow-grey
-        "
-      >
-        <h3 class="hide">Floating menu</h3>
-        <img src="assets/handshake-2-xxl.png" alt="" class="icon" />
-      </div>
-      <div
-        class="floating-menu__jobs floating-menu circle-reverse box-shadow-grey"
-      >
-        <h3 class="hide">Floating menu</h3>
-        <img src="assets/add-user-3-xxl.png" alt="" class="icon" />
-      </div>
+      <a href="#top">
+        <div
+          class="
+            collapsible
+            floating-menu__back-to-top
+            floating-menu
+            circle-reverse
+            box-shadow-grey
+          "
+        >
+          <h3 class="hide">Floating menu</h3>
+          <img src="assets/arrow-141-xxl.png" alt="" class="icon" />
+        </div>
+      </a>
+      <a href="#contacts">
+        <div
+          class="
+            collapsible
+            floating-menu__contacts
+            floating-menu
+            circle-reverse
+            box-shadow-grey
+          "
+        >
+          <h3 class="hide">Floating menu</h3>
+          <img class="icon" src="assets/contacts-2-xxl.png" alt="" />
+        </div>
+      </a>
+      <a href="#about-us">
+        <div
+          class="
+            collapsible
+            floating-menu__about-us
+            floating-menu
+            circle-reverse
+            box-shadow-grey
+          "
+        >
+          <h3 class="hide">Floating menu</h3>
+          <img src="assets/conference-xxl.png" alt="" class="icon" />
+        </div>
+      </a>
+      <a href="#refs">
+        <div
+          class="
+            collapsible
+            floating-menu__refs
+            floating-menu
+            circle-reverse
+            box-shadow-grey
+          "
+        >
+          <h3 class="hide">Floating menu</h3>
+          <img src="assets/show-property-xxl.png" alt="" class="icon" />
+        </div>
+      </a>
+      <a href="#services">
+        <div
+          class="
+            collapsible
+            floating-menu__services
+            floating-menu
+            circle-reverse
+            box-shadow-grey
+          "
+        >
+          <h3 class="hide">Floating menu</h3>
+          <img src="assets/handshake-2-xxl.png" alt="" class="icon" />
+        </div>
+      </a>
+      <a href="#jobs">
+        <div
+          class="
+            collapsible
+            floating-menu__jobs
+            floating-menu
+            circle-reverse
+            box-shadow-grey
+          "
+        >
+          <h3 class="hide">Floating menu</h3>
+          <img src="assets/add-user-3-xxl.png" alt="" class="icon" />
+        </div>
+      </a>
     </section>
   </body>
   <script src="main.js"></script>
