2nd menu done without soft in

--- a/index.html
+++ b/index.html
@@ -592,7 +592,12 @@ Kedves Backstage!
     </main>
     <section>
       <div
-        class="floating-menu__menu floating-menu circle-reverse box-shadow-grey"
+        class="
+          floating-menu__menu
+          floating-menu floating-menu__collapsible
+          circle-reverse
+          box-shadow-grey
+        "
       >
         <h3 class="hide">Floating menu</h3>
         <div class="line"></div>
