--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
           </div>
           <div class="hero__body">
             <h1 class="hero__title">Stabilan a rendezvények hátterében</h1>
-            <a href="" class="button glow-white">Írjon nekünk</a>
+            <a
+              href="mailto:jozsef.mandula@gmail.com?subject=Üzenet a weboldalunkról!&body=Ez egy előre megadott szövegtörzs!"
+              class="button glow-white"
+              >Írjon nekünk</a
+            >
           </div>
         </div>
         <div class="media">
@@ -438,7 +442,7 @@
         >
           <div class="form__body border-purple border-radius">
             <h3>Itt Írj nekünk, és mi megkeresünk</h3>
-            <form action="https://formspree.io/f/{form_id}" method="post">
+            <form action="https://formspree.io/f/xjvjnwgz" method="post">
               <fieldset>
                 <div class="form__body-grid">
                   <input
