1st mobil menu development started

--- a/index.html
+++ b/index.html
@@ -71,11 +71,14 @@
           <a href="#contacts">Kapcsolat</a>
         </li>
         <li>
-          <a class="nav-list__item hide show-720" href="" alt="Menü"
-            ><img class="nav-list__menu show-720" src="" alt="MB."
-          /></a>
+          <div class="nav-list__mobile-button hide show-720">
+            <a class="nav-list__item hide show-720" href="" alt="Menü">⌘</a>
+          </div>
         </li>
       </ul>
+      <div class="nav-list__mobile-content">
+        <div class="nav-list__mobile-content"></div>
+      </div>
     </nav>
     <main class="main">
       <section class="hero">
