Site ready for testing

--- a/index.html
+++ b/index.html
@@ -71,13 +71,41 @@
           <a href="#contacts">Kapcsolat</a>
         </li>
         <li>
-          <div class="nav-list__mobile-button hide show-720">
-            <a class="nav-list__item hide show-720" href="" alt="Menü">⌘</a>
+          <div class="mobile-button-helper">
+            <div class="nav-list__item mobile-button hide show-720 glow-purple">
+              ⌘
+            </div>
           </div>
         </li>
       </ul>
-      <div class="nav-list__mobile-content">
-        <div class="nav-list__mobile-content"></div>
+      <div
+        class="
+          nav-list__mobile-content
+          container-pos
+          box-shadow-light
+          nav-menu__collapsible
+        "
+      >
+        <ul class="nav-list__mobile-body">
+          <li class="nav-list__mobile-item glow-white menu-button">
+            <a href="#about-us">Rólunk</a>
+          </li>
+          <li class="nav-list__mobile-item glow-white menu-button">
+            <a href="#refs">Referenciák</a>
+          </li>
+          <li class="nav-list__mobile-item glow-white menu-button">
+            <a href="#services">Szolgáltatások</a>
+          </li>
+          <li class="nav-list__mobile-item glow-white menu-button">
+            <a href="#jobs">Állás</a>
+          </li>
+          <li class="nav-list__mobile-item glow-white menu-button">
+            <a href="#contacts">Kapcsolat</a>
+          </li>
+          <li class="nav-list__mobile-item glow-white menu-button">
+            <a href="">Bezár</a>
+          </li>
+        </ul>
       </div>
     </nav>
     <main class="main">
@@ -89,7 +117,7 @@
           <div class="hero__body">
             <h1 class="hero__title">Stabilan a rendezvények hátterében</h1>
             <a
-              href="mailto:jozsef.mandula@gmail.com?subject=Üzenet a weboldalunkról!&body=Ez egy előre megadott szövegtörzs!"
+              href="mailto:info@backstagekft.hu?cc=feketekoromieszter@backstagekft.hu&subject=Üzenet a weboldalunkról!&body=Ez egy előre megadott szövegtörzs!"
               class="button glow-white"
               >Írjon nekünk</a
             >
@@ -556,7 +584,7 @@ Kedves Backstage!
                 ><img class="social-logo" src="assets/phone-30-128.png" alt=""
               /></a>
               <a
-                href="mailto:jozsef.mandula@gmail.com?subject=Mail from Our Site&body=Body-goes-here"
+                href="mailto:info@backstagekft.hu?cc=feketekoromieszter@backstagekft.hu&subject=Üzenet a weboldalunkról!&body=Ez egy előre megadott szövegtörzs!"
                 target="_blank"
                 ><img class="social-logo" src="assets/email-128.png" alt=""
               /></a>
