2nd menz fully functional but needs refractoring

--- a/index.html
+++ b/index.html
@@ -635,9 +635,10 @@ Kedves Backstage!
         "
       >
         <h3 class="hide">Floating menu</h3>
+        <div class="floating-menu__icon">⌘</div>
+        <!-- <div class="line"></div>
         <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
+        <div class="line"></div> -->
       </div>
       <a href="#top">
         <div
