--- a/index.html
+++ b/index.html
@@ -340,15 +340,19 @@
             class="media2__body box-shadow-grey media3-color-gradient-pink two-border-radius--left two-border-radius--top"
           >
             <h3 class="media2__body-heading center-text">
-              Állandó partnereink
+              Konferenciák, protokoll események
             </h3>
-            <p class="media2__text center-text">Pesti Vigadó</p>
-            <p class="media2__text center-text">Diabétesz Világnap</p>
+            <p class="media2__text center-text">
+              Pesti Vigadó (állandó partnerünk) rendezvényei
+            </p>
+            <p class="media2__text center-text">
+              Event&More Kft (állandó partnerünk) rendezvényei
+            </p>
             <p class="media2__text center-text">
               Olaj- és Gázipari konferencia
             </p>
             <p class="media2__text center-text">
-              Event & More Produkciós Iroda Kft.
+              Művészet elméleti konferenciák
             </p>
           </div>
         </section>
@@ -363,11 +367,15 @@
           <div
             class="media2__body box-shadow-grey media3-color-gradient-purple two-border-radius--right two-border-radius--top"
           >
-            <h3 class="media2__body-heading center-text">Rendezvények</h3>
-            <p class="media2__text center-text">Fashion week</p>
+            <h3 class="media2__body-heading center-text">
+              Családi, sport - és egészség napok
+            </h3>
+            <p class="media2__text center-text">Diabétesz Világnap</p>
             <p class="media2__text center-text">Schar Gluténmentes nap</p>
-            <p class="media2__text center-text">Tipton</p>
-            <p class="media2__text center-text">Karrier Fórum</p>
+            <p class="media2__text center-text">Kinder gyereknap</p>
+            <p class="media2__text center-text">
+              Ország Játéka Nap- Mattel kitelepülés
+            </p>
           </div>
         </section>
         <section
@@ -381,10 +389,13 @@
           <div
             class="media2__body box-shadow-grey media3-color-gradient-pink two-border-radius--left two-border-radius--top"
           >
-            <h3 class="media2__body-heading center-text">Kitelepülések</h3>
-            <p class="media2__text center-text">Kinder</p>
-            <p class="media2__text center-text">Suzuki</p>
-            <p class="media2__text center-text">Mattel</p>
+            <h3 class="media2__body-heading center-text">
+              Céges rendezvények, show-k
+            </h3>
+            <p class="media2__text center-text">Fashion show</p>
+            <p class="media2__text center-text">Tipton termékbemutatók</p>
+            <p class="media2__text center-text">Automotive- Suzuki stand</p>
+            <p class="media2__text center-text">Karrier Fórum</p>
           </div>
         </section>
       </article>
