--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
               Olaj- és Gázipari konferencia
             </p>
             <p class="media2__text center-text">
-              Művészet elméleti konferenciák
+              Művészetelméleti konferenciák
             </p>
           </div>
         </section>
@@ -423,7 +423,7 @@
           class="form__content container-pos box-shadow-light componet-glue"
         >
           <div class="form__body border-purple border-radius">
-            <h3>Itt Írj nekünk, és mi megkeresünk</h3>
+            <h3>Itt írj nekünk, és mi megkeresünk</h3>
             <form action="https://formspree.io/f/xjvjnwgz" method="post">
               <fieldset>
                 <div class="form__body-grid">
