added ginop sponsor page and links

--- a/index.html
+++ b/index.html
@@ -48,13 +48,21 @@
     <nav class="nav">
       <ul class="nav-list colorgrad-bg-dense container-pos box-shadow-light">
         <li class="nav-list__item">
-          <a href="" alt="Újratöltés"
+          <a href="/" alt="Újratöltés"
             ><img
               alt="Backstage logo"
               class="nav-list__logo"
               src="assets\backstage logo white.png"
           /></a>
+          <a href="/ginop">
+            <img src="assets/szechenyi-2020-border.svg" alt="ginop_logo" class="ginop__logo">
+          </a>
         </li>
+        <!-- <li class="nav-list__item">
+          <a href="/">
+            <img src="assets/szechenyi-2020-border.svg" alt="ginop_logo" class="ginop__logo">
+          </a>
+        </li> -->
         <li class="nav-list__item glow-white hide-720 ease-out">
           <a href="#about-us">Rólunk</a>
         </li>
